[package]
name = "jsonld-rust-db"
version = "0.1.0"
authors = ["Matthew Collier <mcollier@digitalbazaar.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iref = "1.4.3"
json-ld = "0.2.0-alpha"
async-std = { version = "^1.5", features = ["attributes"] }
static-iref = "^1.0"
iref-enum = "^1.2"
stderrlog = "^0.5"
tokio = { version = "^0.2", features = ["macros"] }
json = "0.12.4"
